--- a/anypoint-elements.html
+++ b/anypoint-elements.html
@@ -12,8 +12,6 @@ License for the specific language governing permissions and limitations under
 the License.
 --><html><head>
 </head><body>
-
-
-
-
+<link rel="import" href="../anypoint-validator-behavior/anypoint-validator-behavior.html">
+<link rel="import" href="../anypoint-validatable-behavior/anypoint-validatable-behavior.html">
 </body></html>
