Update: Added anypoint-behaviors selement

--- a/anypoint-elements.html
+++ b/anypoint-elements.html
@@ -14,4 +14,6 @@ the License.
 </head><body>
 <link rel="import" href="../anypoint-validator-behavior/anypoint-validator-behavior.html">
 <link rel="import" href="../anypoint-validatable-behavior/anypoint-validatable-behavior.html">
+<link rel="import" href="../anypoint-behaviors/anypoint-behaviors.html">
+
 </body></html>
