--- a/anypoint-elements.html
+++ b/anypoint-elements.html
@@ -21,4 +21,5 @@ the License.
 <link rel="import" href="../anypoint-radio-button/anypoint-radio-button.html">
 <link rel="import" href="../anypoint-radio-group/anypoint-radio-group.html">
 <link rel="import" href="../anypoint-password-input/anypoint-password-input.html">
+<link rel="import" href="../anypoint-styles/anypoint-styles.html">
 </head><body></body></html>
